Swap tool auto downloader working.
// TODO Later
Add in Browse button
Add ui reflection of download progess/occuring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(COPYRIGHT_HOLDERS "The Monero Project")
 option(STATIC "Link libraries statically, requires static Qt" OFF)
 option(SELF_CONTAINED "Disable when building Feather for packages" OFF)
 option(TOR_DIR "Directory containing Tor binaries to embed inside Feather" OFF)
-option(CHECK_UPDATES "Enable checking for application updates" OFF)
+option(CHECK_UPDATES "Enable checking for application updates" ON)
 option(PLATFORM_INSTALLER "Built-in updater fetches installer (windows-only)" OFF)
 option(USE_DEVICE_TREZOR "Trezor support compilation" ON)
 option(DONATE_BEG "Prompt donation window every once in a while" OFF)
@@ -119,6 +119,7 @@ endif()
 # libzip
 if(CHECK_UPDATES)
     set(ZLIB_USE_STATIC_LIBS "ON")
+    message("libzip inclueded")
     find_package(ZLIB REQUIRED)
     find_path(LIBZIP_INCLUDE_DIRS zip.h)
     find_library(LIBZIP_LIBRARIES zip)
