--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -54,7 +54,7 @@ jobs:
       - name: install dependencies
         run: sudo apt update; sudo apt -y install guix git ca-certificates
       - name: build
-        run: SUBSTITUTE_URLS='http://ci.guix.gnu.org' HOSTS="${{ matrix.toolchain.target }}" ./contrib/guix/guix-build
+        run: SUBSTITUTE_URLS='http://bordeaux.guix.gnu.org http://ci.guix.gnu.org' HOSTS="${{ matrix.toolchain.target }}" ./contrib/guix/guix-build
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.toolchain.target }}
