--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -54,7 +54,9 @@ jobs:
       - name: install dependencies
         run: sudo apt update; sudo apt -y install guix git ca-certificates apparmor-utils
       - name: fix apparmor
-        run: sudo cp .github/workflows/guix /etc/apparmor.d/guix; sudo /etc/init.d/apparmor reload; sudo aa-enforce guix
+        run: sudo cp .github/workflows/guix /etc/apparmor.d/guix; sudo /etc/init.d/apparmor reload; sudo aa-enforce guix || echo "failed"
+      - name: purge apparmor
+        run: sudo apt purge apparmor
       - name: build
         run: SUBSTITUTE_URLS='http://bordeaux.guix.gnu.org http://ci.guix.gnu.org' HOSTS="${{ matrix.toolchain.target }}" ./contrib/guix/guix-build
       - uses: actions/upload-artifact@v4
