ci: remove ci.guix.gnu.org substitute
Causes 403 forbidden errors on GitHub CI.

--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -58,7 +58,7 @@ jobs:
       - name: purge apparmor
         run: sudo apt purge apparmor
       - name: build
-        run: SUBSTITUTE_URLS='http://bordeaux.guix.gnu.org http://ci.guix.gnu.org' HOSTS="${{ matrix.toolchain.target }}" ./contrib/guix/guix-build
+        run: SUBSTITUTE_URLS='http://bordeaux.guix.gnu.org' HOSTS="${{ matrix.toolchain.target }}" ./contrib/guix/guix-build
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.toolchain.target }}
