--- a/contrib/depends/toolchain.cmake.in
+++ b/contrib/depends/toolchain.cmake.in
@@ -29,6 +29,9 @@ SET(ENV{PKG_CONFIG_PATH} @prefix@/lib/pkgconfig)
 SET(TOR_DIR @prefix@/Tor CACHE STRING "Tor dir")
 SET(TOR_VERSION @tor_version@ CACHE STRING "Tor version")
 
+SET(LibArchive_LIBRARIES @prefix@/lib/libarchive.a)
+SET(LibArchive_INCLUDE_DIR @prefix@/include/)
+
 SET(Readline_ROOT_DIR @prefix@)
 SET(Readline_INCLUDE_DIR @prefix@/include)
 SET(Readline_LIBRARY @prefix@/lib/libreadline.a)
