--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -302,7 +302,7 @@ if (WITH_SCANNER)
 endif()
 
 if (WITH_PLUGIN_ATOMIC)
-    FIND_PACKAGE(LibArchive REQUIRED)
+    #FIND_PACKAGE(LibArchive REQUIRED)
     INCLUDE_DIRECTORIES(${LibArchive_INCLUDE_DIR})
     target_link_libraries(feather PRIVATE ${LibArchive_LIBRARIES})
 endif()
