Fixes for Issues #1,#2,#3 and additionally fixes CMakeLists allow non guix builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,12 @@ set(COPYRIGHT_YEAR "2024")
 set(COPYRIGHT_HOLDERS "The Monero Project")
 
 # Configurable options
-option(STATIC "Link libraries statically, requires static Qt" ON)
+option(STATIC "Link libraries statically, requires static Qt" OFF)
 option(SELF_CONTAINED "Disable when building Feather for packages" OFF)
 option(TOR_DIR "Directory containing Tor binaries to embed inside Feather" OFF)
 option(CHECK_UPDATES "Enable checking for application updates" ON)
 option(PLATFORM_INSTALLER "Built-in updater fetches installer (windows-only)" OFF)
-option(USE_DEVICE_TREZOR "Trezor support compilation" ON)
+option(USE_DEVICE_TREZOR "Trezor support compilation" OFF)
 option(DONATE_BEG "Prompt donation window every once in a while" OFF)
 option(WITH_SCANNER "Enable webcam QR scanner" OFF)
 option(STACK_TRACE "Dump stack trace on crash (Linux only)" OFF)
