macos: disable SingleApplication

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,8 +20,10 @@ endif()
 
 find_package(Qt6 REQUIRED COMPONENTS ${QT_COMPONENTS})
 
-set(QAPPLICATION_CLASS QApplication CACHE STRING "Inheritance class for SingleApplication")
-add_subdirectory(third-party/singleapplication)
+if (NOT APPLE)
+    set(QAPPLICATION_CLASS QApplication CACHE STRING "Inheritance class for SingleApplication")
+    add_subdirectory(third-party/singleapplication)
+endif()
 
 if (CHECK_UPDATES)
     add_subdirectory(openpgp)
@@ -272,12 +274,15 @@ target_link_libraries(feather PRIVATE
         Threads::Threads
         ${QRENCODE_LIBRARY}
         ${POLYSEED_LIBRARY}
-        SingleApplication::SingleApplication
         ${ICU_LIBRARIES}
         ${LIBZIP_LIBRARIES}
         ${ZLIB_LIBRARIES}
         ${BCUR_LIBRARY}
 )
+
+if(NOT APPLE)
+    target_link_libraries(feather PRIVATE SingleApplication::SingleApplication)
+endif()
 
 if(CHECK_UPDATES)
     target_link_libraries(feather PRIVATE openpgp)
