--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -82,7 +82,9 @@ jobs:
           merge-multiple: true
       - name: print hashes
         run: |
+          echo '```' >> $GITHUB_STEP_SUMMARY
           uname --machine && find **/output/ -type f -print0 | env LC_ALL=C sort -z | xargs -r0 sha256sum >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
       - uses: actions/upload-artifact@v4
         with:
           name: "logs"
