--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ option(DONATE_BEG "Prompt donation window every once in a while" OFF)
 option(WITH_SCANNER "Enable webcam QR scanner" OFF)
 option(STACK_TRACE "Dump stack trace on crash (Linux only)" OFF)
 
-#
+# Plugins
 option(WITH_PLUGIN_HOME "Include Home tab plugin" ON)
 option(WITH_PLUGIN_TICKERS "Include Tickers Home plugin" ON)
 option(WITH_PLUGIN_CROWDFUNDING "Include Crowdfunding Home plugin" ON)
@@ -115,7 +115,6 @@ endif()
 # libzip
 if(CHECK_UPDATES OR WITH_PLUGIN_ATOMIC)
     set(ZLIB_USE_STATIC_LIBS "ON")
-    message("libzip inclueded")
     find_package(ZLIB REQUIRED)
     find_path(LIBZIP_INCLUDE_DIRS zip.h)
     find_library(LIBZIP_LIBRARIES zip)
