ci: don't run virustotal scan if key is missing

--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -60,7 +60,7 @@ jobs:
       - name: build
         run: SUBSTITUTE_URLS='http://bordeaux.guix.gnu.org' HOSTS="${{ matrix.toolchain.target }}" ./contrib/guix/guix-build
       - name: virustotal scan
-        if: matrix.toolchain.target == 'x86_64-w64-mingw32'
+        if: matrix.toolchain.target == 'x86_64-w64-mingw32' && secrets.VT_API_KEY != ''
         uses: crazy-max/ghaction-virustotal@v4
         with:
           vt_api_key: ${{ secrets.VT_API_KEY }}
