--- a/contrib/depends/toolchain.cmake.in
+++ b/contrib/depends/toolchain.cmake.in
@@ -94,28 +94,30 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     SET(BUILD_TAG "mac-x64")
     SET(CMAKE_OSX_ARCHITECTURES "x86_64")
   endif()
+  SET(CMAKE_SYSTEM_VERSION 20.1)
   SET(_CMAKE_TOOLCHAIN_PREFIX @prefix@/native/bin/${CONF_TRIPLE}-)
   SET(CMAKE_C_COMPILER @CC@)
   SET(CMAKE_C_COMPILER_TARGET ${CLANG_TARGET})
-  SET(CMAKE_C_FLAGS_INIT -B${_CMAKE_TOOLCHAIN_PREFIX})
-  SET(CMAKE_CXX_COMPILER @CXX@ -stdlib=libc++ )
-  SET(CMAKE_CXX_COMPILER_TARGET ${CLANG_TARGET})
-  SET(CMAKE_CXX_FLAGS_INIT -B${_CMAKE_TOOLCHAIN_PREFIX})
+  SET(CMAKE_C_FLAGS "@CFLAGS@")
+  SET(CMAKE_CXX_COMPILER @CXX@ -stdlib=libc++)
+  SET(CMAKE_CXX_FLAGS "@CXXFLAGS@")
+  SET(CMAKE_EXE_LINKER_FLAGS "@LDFLAGS@")
+  SET(CMAKE_MODULE_LINKER_FLAGS "@LDFLAGS@")
+  SET(CMAKE_SHARED_LINKER_FLAGS "@LDFLAGS@")
+  SET(CMAKE_INSTALL_NAME_TOOL llvm-install-name-tool)
   SET(CMAKE_ASM_COMPILER clang)
-  SET(CMAKE_ASM-ATT_COMPILER as)
+  SET(CMAKE_ASM-ATT_COMPILER llvm-as)
   SET(CMAKE_ASM_COMPILER_TARGET ${CLANG_TARGET})
   SET(CMAKE_ASM-ATT_COMPILER_TARGET ${CLANG_TARGET})
-  SET(CMAKE_AR @prefix@/native/bin/${CLANG_TARGET}-ar)
-  SET(CMAKE_RANLIB @prefix@/native/bin/${CLANG_TARGET}-ranlib)
+  SET(CMAKE_AR llvm-ar)
+  SET(CMAKE_RANLIB llvm-ranlib)
   SET(APPLE True)
   SET(BUILD_64 ON)
   SET(BREW OFF)
   SET(PORT OFF)
   SET(CMAKE_OSX_SYSROOT "@prefix@/native/SDK")
-  SET(CMAKE_OSX_DEPLOYMENT_TARGET "10.14")
+  SET(CMAKE_OSX_DEPLOYMENT_TARGET "11.0")
   SET(CMAKE_CXX_STANDARD 17)
-  SET(LLVM_ENABLE_PIC OFF)
-  SET(LLVM_ENABLE_PIE OFF)
 else()
   SET(CMAKE_C_COMPILER @CC@)
   SET(CMAKE_CXX_COMPILER @CXX@)
