--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,10 @@ jobs:
         run: sudo apt update
       - name: install dependencies
         run: sudo apt -y install git cmake build-essential ccache libssl-dev libunbound-dev libboost-all-dev
-                                 libqrencode-dev qt6-base-dev libgl1-mesa-dev libqt6svg6-dev libqt6websockets6-dev
-                                 qt6-multimedia-dev libzip-dev libsodium-dev libgcrypt-dev libx11-xcb-dev
-                                 libprotobuf-dev libhidapi-dev libzxingcore-dev
+                                 libqrencode-dev qt6-base-dev qt6-svg-dev qt6-websockets-dev qt6-multimedia-dev
+                                 qt6-wayland-dev libzip-dev libsodium-dev libgcrypt20-dev libx11-xcb-dev
+                                 protobuf-compiler libprotobuf-dev libhidapi-dev libzxing-dev libusb-dev
+                                 libusb-1.0-0-dev
       - name: build
         run: |
           mkdir build
