Revert "ci: integrate signpath"
This reverts commit c0337189565611b0bb8ce2d71fc45a9f07c1984e.

Revert until the SignPath GitHub app does not require admin
permissions.

--- a/contrib/installers/windows/setup.nsi.in
+++ b/contrib/installers/windows/setup.nsi.in
@@ -1,6 +1,6 @@
 Name "Feather Wallet"
 
-OutFile "${CUR_PATH}\contrib\installers\windows\FeatherWalletSetup-@PROJECT_VERSION@-unsigned.exe"
+OutFile "${CUR_PATH}\contrib\installers\windows\FeatherWalletSetup-@PROJECT_VERSION@.exe"
 RequestExecutionLevel highest
 SetCompressor /SOLID lzma
 SetDateSave off
